src/objects/CH_WorkgroupCountryAssociation__c.object
<CustomObject>
    <fields>
        <fullName>CH_Country1__c</fullName>
        <description>NOKIASC-24587:Create this custom field to use CH_Countries global pick list value set as a part of country pick list alignment.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CH_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Apttus_Config2__Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CH_Duplicate_Check__c</fullName>
        <caseSensitive>true</caseSensitive>
        <encryptionScheme>None</encryptionScheme>
        <label>Duplicate Check</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CH_Workgroup__c</fullName>
        <label>Workgroup</label>
        <referenceTo>CH_Workgroup__c</referenceTo>
        <relationshipLabel>Workgroup Country Associations</relationshipLabel>
        <relationshipName>Workgroup_Country_Associations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workgroup Country Association</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WCOA-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workgroup Country Associations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>